[Chapter 9] Cart creation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,9 @@
 	<div id="columns">
 		<div id="side">
 			<ul>
-				<li><a href="#">Home</a></li>
+				<li><a href="/">Home</a></li>
 				<li><a href="#">Questions</a></li>
-				<li><a href="#">News</a></li>
+				<li><a href="/products">Products</a></li>
 				<li><a href="#">Contact</a></li>
 			</ul>
 		</div>
