--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,3 +1,4 @@
+<% unless cart.line_items.empty? %>
 <h2 class="cart_title">Your Cart</h2>
 <table>
 	<%= render(cart.line_items) %>
@@ -10,3 +11,4 @@
 	</tr>
 </table>
 <%= button_to 'Empty cart', cart, method: :delete, data: { confirm: 'Are you sure?' } %>
+<% end %>
