--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,11 @@
 	</div>
 	<div id="columns">
 		<div id="side">
-			<div id="cart">
-				<%= render @cart %>
+			<div id="cart"
+				<% if @cart.line_items.empty? %>
+					style="display: none"
+				<% end %>
+				> <%= render(@cart) %>
 			</div>
 			
 			<ul>
