--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,10 @@
 	</div>
 	<div id="columns">
 		<div id="side">
-			<div id="cart"
-				<% if @cart.line_items.empty? %>
-					style="display: none"
+			<div id="cart">
+				<%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+					<%= render @cart %>
 				<% end %>
-				> <%= render(@cart) %>
 			</div>
 			
 			<ul>
