--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,14 +14,16 @@
 	<div id="columns">
 		<div id="side">
 			<div id="cart">
-				<%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
-					<%= render @cart %>
+				<% if @cart %>
+					<%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+						<%= render @cart %>
+					<% end %>
 				<% end %>
 			</div>
 			
 			<ul>
 				<li><a href="/">Home</a></li>
-				<li><a href="#">Questions</a></li>
+				<li><a href="/carts">Carts</a></li>
 				<li><a href="/products">Products</a></li>
 				<li><a href="#">Contact</a></li>
 			</ul>
