--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,9 @@
 			
 			<ul>
 				<li><a href="/">Home</a></li>
-				<li><a href="/carts">Carts</a></li>
+				<li><a href="/users/new">Create User</a></li>
+				<li><a href="/login">Login</a></li>
+				<li><a href="/admin">Admin</a></li>
 				<li><a href="/products">Products</a></li>
 				<li><a href="#">Contact</a></li>
 			</ul>
