--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,5 +1,5 @@
 <% unless cart.line_items.empty? %>
-<h2 class="cart_title">Your Cart</h2>
+<h2><%= t('.title') %></h2>
 <table>
 	<%= render(cart.line_items) %>
 	<!-- render to cart/line_items -->
@@ -10,6 +10,6 @@
 		<td class="total_cell"><%= number_to_currency(cart.total_price) %></td>
 	</tr>
 </table>
-<%= button_to 'Empty cart', cart, method: :delete, data: { confirm: 'Are you sure?' } %>
-<%= button_to "Checkout", new_order_path, method: :get %>
+<%= button_to t('.checkout'), new_order_path, method: :get %>
+<%= button_to t('.empty'), cart, method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %>
